Changed accessor behaviour to nullable return value

--- a/.palantir/revapi.yml
+++ b/.palantir/revapi.yml
@@ -4546,6 +4546,172 @@ acceptedBreaks:
       new: "method java.util.List<T> net.fortuna.ical4j.model.RecurrenceSupport<T\
         \ extends net.fortuna.ical4j.model.component.CalendarComponent>::getOccurrences(net.fortuna.ical4j.model.Period<java.time.temporal.Temporal>)"
       justification: "refactoring_prototype"
+    - code: "java.method.returnTypeChanged"
+      old: "method <T extends java.time.temporal.Temporal> java.util.Optional<net.fortuna.ical4j.model.property.DtEnd<T>>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeEnd()"
+      new: "method <T extends java.time.temporal.Temporal> net.fortuna.ical4j.model.property.DtEnd<T>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeEnd()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method <T extends java.time.temporal.Temporal> java.util.Optional<net.fortuna.ical4j.model.property.DtStart<T>>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeStart()"
+      new: "method <T extends java.time.temporal.Temporal> net.fortuna.ical4j.model.property.DtStart<T>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeStart()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method <T extends java.time.temporal.Temporal> java.util.Optional<net.fortuna.ical4j.model.property.Due<T>>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeDue()"
+      new: "method <T extends java.time.temporal.Temporal> net.fortuna.ical4j.model.property.Due<T>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeDue()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method <T extends java.time.temporal.Temporal> java.util.Optional<net.fortuna.ical4j.model.property.RecurrenceId<T>>\
+        \ net.fortuna.ical4j.model.RelationshipPropertyAccessor::getRecurrenceId()"
+      new: "method <T extends java.time.temporal.Temporal> net.fortuna.ical4j.model.property.RecurrenceId<T>\
+        \ net.fortuna.ical4j.model.RelationshipPropertyAccessor::getRecurrenceId()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.CalScale>\
+        \ net.fortuna.ical4j.model.CalendarPropertyAccessor::getCalendarScale()"
+      new: "method net.fortuna.ical4j.model.property.CalScale net.fortuna.ical4j.model.CalendarPropertyAccessor::getCalendarScale()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Categories>\
+        \ net.fortuna.ical4j.model.DescriptivePropertyAccessor::getCategories()"
+      new: "method java.util.List<net.fortuna.ical4j.model.property.Categories> net.fortuna.ical4j.model.DescriptivePropertyAccessor::getCategories()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Clazz> net.fortuna.ical4j.model.DescriptivePropertyAccessor::getClassification()"
+      new: "method net.fortuna.ical4j.model.property.Clazz net.fortuna.ical4j.model.DescriptivePropertyAccessor::getClassification()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Completed>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeCompleted()"
+      new: "method net.fortuna.ical4j.model.property.Completed net.fortuna.ical4j.model.DateTimePropertyAccessor::getDateTimeCompleted()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Contact> net.fortuna.ical4j.model.RelationshipPropertyAccessor::getContact()"
+      new: "method net.fortuna.ical4j.model.property.Contact net.fortuna.ical4j.model.RelationshipPropertyAccessor::getContact()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Created> net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getCreated()"
+      new: "method net.fortuna.ical4j.model.property.Created net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getCreated()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Description>\
+        \ net.fortuna.ical4j.model.DescriptivePropertyAccessor::getDescription()"
+      new: "method net.fortuna.ical4j.model.property.Description net.fortuna.ical4j.model.DescriptivePropertyAccessor::getDescription()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.DtStamp> net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getDateTimeStamp()"
+      new: "method net.fortuna.ical4j.model.property.DtStamp net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getDateTimeStamp()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.DtStart<java.time.LocalDateTime>>\
+        \ net.fortuna.ical4j.model.TimeZonePropertyAccessor::getStartDate()"
+      new: "method net.fortuna.ical4j.model.property.DtStart<java.time.LocalDateTime>\
+        \ net.fortuna.ical4j.model.TimeZonePropertyAccessor::getStartDate()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Duration>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getDuration()"
+      new: "method net.fortuna.ical4j.model.property.Duration net.fortuna.ical4j.model.DateTimePropertyAccessor::getDuration()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.FreeBusy>\
+        \ net.fortuna.ical4j.model.DateTimePropertyAccessor::getFreeBusyTime()"
+      new: "method net.fortuna.ical4j.model.property.FreeBusy net.fortuna.ical4j.model.DateTimePropertyAccessor::getFreeBusyTime()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Geo> net.fortuna.ical4j.model.DescriptivePropertyAccessor::getGeographicPos()"
+      new: "method net.fortuna.ical4j.model.property.Geo net.fortuna.ical4j.model.DescriptivePropertyAccessor::getGeographicPos()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.LastModified>\
+        \ net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getLastModified()"
+      new: "method net.fortuna.ical4j.model.property.LastModified net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getLastModified()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.LastModified>\
+        \ net.fortuna.ical4j.model.TimeZonePropertyAccessor::getLastModified()"
+      new: "method net.fortuna.ical4j.model.property.LastModified net.fortuna.ical4j.model.TimeZonePropertyAccessor::getLastModified()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Location>\
+        \ net.fortuna.ical4j.model.DescriptivePropertyAccessor::getLocation()"
+      new: "method net.fortuna.ical4j.model.property.Location net.fortuna.ical4j.model.DescriptivePropertyAccessor::getLocation()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Method> net.fortuna.ical4j.model.CalendarPropertyAccessor::getMethod()"
+      new: "method net.fortuna.ical4j.model.property.Method net.fortuna.ical4j.model.CalendarPropertyAccessor::getMethod()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Organizer>\
+        \ net.fortuna.ical4j.model.RelationshipPropertyAccessor::getOrganizer()"
+      new: "method net.fortuna.ical4j.model.property.Organizer net.fortuna.ical4j.model.RelationshipPropertyAccessor::getOrganizer()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.PercentComplete>\
+        \ net.fortuna.ical4j.model.DescriptivePropertyAccessor::getPercentComplete()"
+      new: "method net.fortuna.ical4j.model.property.PercentComplete net.fortuna.ical4j.model.DescriptivePropertyAccessor::getPercentComplete()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Priority>\
+        \ net.fortuna.ical4j.model.DescriptivePropertyAccessor::getPriority()"
+      new: "method net.fortuna.ical4j.model.property.Priority net.fortuna.ical4j.model.DescriptivePropertyAccessor::getPriority()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.ProdId> net.fortuna.ical4j.model.CalendarPropertyAccessor::getProductId()"
+      new: "method net.fortuna.ical4j.model.property.ProdId net.fortuna.ical4j.model.CalendarPropertyAccessor::getProductId()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.RelatedTo>\
+        \ net.fortuna.ical4j.model.RelationshipPropertyAccessor::getRelatedTo()"
+      new: "method net.fortuna.ical4j.model.property.RelatedTo net.fortuna.ical4j.model.RelationshipPropertyAccessor::getRelatedTo()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Sequence>\
+        \ net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getSequence()"
+      new: "method net.fortuna.ical4j.model.property.Sequence net.fortuna.ical4j.model.ChangeManagementPropertyAccessor::getSequence()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Status> net.fortuna.ical4j.model.DescriptivePropertyAccessor::getStatus()"
+      new: "method net.fortuna.ical4j.model.property.Status net.fortuna.ical4j.model.DescriptivePropertyAccessor::getStatus()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Summary> net.fortuna.ical4j.model.DescriptivePropertyAccessor::getSummary()"
+      new: "method net.fortuna.ical4j.model.property.Summary net.fortuna.ical4j.model.DescriptivePropertyAccessor::getSummary()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Transp> net.fortuna.ical4j.model.DateTimePropertyAccessor::getTimeTransparency()"
+      new: "method net.fortuna.ical4j.model.property.Transp net.fortuna.ical4j.model.DateTimePropertyAccessor::getTimeTransparency()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzId> net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneId()"
+      new: "method net.fortuna.ical4j.model.property.TzId net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneId()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzOffsetFrom>\
+        \ net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneOffsetFrom()"
+      new: "method net.fortuna.ical4j.model.property.TzOffsetFrom net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneOffsetFrom()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzOffsetTo>\
+        \ net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneOffsetTo()"
+      new: "method net.fortuna.ical4j.model.property.TzOffsetTo net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneOffsetTo()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.TzUrl> net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneUrl()"
+      new: "method net.fortuna.ical4j.model.property.TzUrl net.fortuna.ical4j.model.TimeZonePropertyAccessor::getTimeZoneUrl()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Url> net.fortuna.ical4j.model.RelationshipPropertyAccessor::getUrl()"
+      new: "method net.fortuna.ical4j.model.property.Url net.fortuna.ical4j.model.RelationshipPropertyAccessor::getUrl()"
+      justification: "accessors_return_nullable_values"
+    - code: "java.method.returnTypeChanged"
+      old: "method java.util.Optional<net.fortuna.ical4j.model.property.Version> net.fortuna.ical4j.model.CalendarPropertyAccessor::getVersion()"
+      new: "method net.fortuna.ical4j.model.property.Version net.fortuna.ical4j.model.CalendarPropertyAccessor::getVersion()"
+      justification: "accessors_return_nullable_values"
     - code: "java.method.returnTypeChangedCovariantly"
       old: "method net.fortuna.ical4j.model.Component net.fortuna.ical4j.model.component.Participant::copy()"
       new: "method net.fortuna.ical4j.model.component.Participant net.fortuna.ical4j.model.component.Participant::copy()"
