--- a/.github/workflows/run-check.yml
+++ b/.github/workflows/run-check.yml
@@ -3,7 +3,7 @@
 
 name: Java CI with Gradle
 
-on: [push]
+on: [pull_request]
 
 permissions: read-all
 
@@ -26,22 +26,3 @@ jobs:
         
       - name: Execute Gradle build
         run: ./gradlew check --console=plain --warning-mode all
-        
-  dependency-submission:
-
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
-        with:
-          java-version: '17'
-          distribution: 'temurin'
-
-      # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-      # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
-      - name: Generate and submit dependency graph
-        uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
